# rosscala_tutorial

./: .gitignore  CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
launch/: simpleTalkerListener.launch
rosscala_tutorial_pubsub/: build.gradle
rosscala_tutorial_pubsub/src/main/scala/com/github/rosscala_tutorial/rosscala_tutorial_pubsub/: Listener.scala  Talker.scala
