<?xml version="1.0"?>
<package>
  <name>rosscala_tutorial</name>
  <version>0.1.0</version>
  <description>The rosscala_tutorial package</description>

  <maintainer email="shingo@hotmail.co.jp">knorth55</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>std_msgs</build_depend>

</package>
